# shop2parcel

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: codeql.yml  hacs.yml  hassfest.yml  pytest.yml  release.yml
.planning/: REQUIREMENTS.md
.planning/phases/03-ha-config-plumbing/: 03-01-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-coordinator-forwarding/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md
.planning/phases/06-testing-hacs-packaging/: 06-01-SUMMARY.md  06-02-SUMMARY.md
.planning/phases/07-diagnostic-tooling-for-email-capture-improvements/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md
.planning/phases/08-parser-template-expansion/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/phases/09-imap-multi-account/: 09-01-SUMMARY.md  09-02-SUMMARY.md  09-03-SUMMARY.md  09-04-SUMMARY.md
.planning/phases/11-activity-log-debug-logging/: 11-02-SUMMARY.md
.planning/phases/12-address-tech-debt/: 12-01-SUMMARY.md  12-02-SUMMARY.md  12-03-SUMMARY.md  12-REVIEW.md
custom_components/shop2parcel/: __init__.py  application_credentials.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostic_sensor.py  diagnostics.py  gmail_coordinator.py  imap_coordinator.py  manifest.json  options_flow.py  sensor.py  strings.json
custom_components/shop2parcel/api/: __init__.py  carrier_codes.py  email_parser.py  exceptions.py  gmail_client.py  imap_client.py  parcelapp.py
custom_components/shop2parcel/translations/: en.json
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostic_sensor.py  test_diagnostics.py  test_init.py  test_multi_account.py  test_options_flow.py  test_sensor.py  test_store_migration.py
tests/api/: test_carrier_codes.py  test_email_parser.py  test_exceptions.py  test_gmail_client.py  test_imap_client.py  test_parcelapp.py
tests/fixtures/: fedex_shipping.html  href_tracking.html  plain_text_tracking.txt  shopify_shipping_email.html  ups_shipping.html  usps_shipping.html
