[project]
name = "shop2parcel"
version = "0.1.3"
description = "Home Assistant custom integration: Shopify → Parcel App tracking via Gmail"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth>=2.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["custom_components"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", ".claude", "tests/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length already enforced via line-length

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "UP", "F401", "F841", "E402"]  # tests can use older idioms / bare assert patterns

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "^tests/",
    "^\\.venv/",
    "^\\.claude/",
]

[[tool.mypy.overrides]]
module = "shop2parcel.options_flow"
# HA generic types (OptionsFlowWithReload, ConfigFlowResult) lack complete stubs
disable_error_codes = ["misc", "no-untyped-def", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "shop2parcel.config_flow"
# HA generic types (ConfigFlow, ConfigFlowResult) lack complete stubs
disable_error_codes = ["misc", "no-untyped-def", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "shop2parcel.coordinator"
# HA generic types (DataUpdateCoordinator, OAuth2Session) lack complete stubs
disable_error_codes = ["misc", "no-untyped-def", "no-untyped-call", "attr-defined"]
